--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: [empymod]
+description: [An open-source full 3D electromagnetic modeller for 1D VTI media in Python]
