--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: [empymod]
 description: [An open-source full 3D electromagnetic modeller for 1D VTI media in Python]
