New, combined website

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [empymod]
-description: [An open-source full 3D electromagnetic modeller for 1D VTI media in Python]
+title: [empymod &amp; emg3d]
+description: [Controlled-source electromagnetic modellers for geophysical exploration purposes]
