--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [empymod &amp; emg3d]
-description: [Controlled-source electromagnetic modellers for geophysical exploration purposes]
+description: [Controlled-Source ElectroMagnetic modellers for Applied Geophysics]
