2nd Try re formatting

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [empymod &amp; emg3d]
-description: [EMSiG: ElectroMagnetic Simulation in Geophysics]
+description: [EMSiG -- ElectroMagnetic Simulation in Geophysics]
