--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [emsig]
-description: [emsig -- ElectroMagnetic Simulation in Geophysics]
+description: [![emsig --](/assets/emsig-logo.png) ElectroMagnetic Simulation in Geophysics]
