--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -33,18 +33,5 @@ jobs:
           # Configure git to be the GitHub Actions account
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
-          # Create deploy folder
-          mkdir deploy
-          # Copy relevant files
-          cp -r _build/html/* deploy/.
-          cp -r _build/html/.[a-zA-Z]* deploy/.
-          cp CNAME deploy/.
-          cp -r .git deploy/.
-          # Move to deploy
-          cd deploy/
-          # Checkout gh-pages
-          git branch -D gh-pages &>/dev/null
-          git checkout --orphan gh-pages
-          git add --all
-          git commit -m 'Update website'
-          git push -f --set-upstream origin gh-pages
+          # Deploy
+          make deploy
