--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -20,10 +20,10 @@ jobs:
 
       # Checks-out your repository under $GITHUB_WORKSPACE
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install requirements
-        run: pip install -r requirements.txt
+        run: python -m pip install -r requirements.txt
 
       - name: Build the documentation and check links
         run: make html -b linkcheck
